--- a/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
@@ -31,7 +31,7 @@
     </button>
   </div>
   <div class="table-box">
-    <el-table ref="resourceAllocationTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData" style="width:1520px;" :cell-style="cellStyle" row-key="task_id" :border="true" :height="tableHeight" default-expand-all
+    <el-table ref="resourceAllocationTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData" style="width:100%;" :cell-style="cellStyle" row-key="task_id" :border="true" :height="tableHeight" default-expand-all
     :tree-props="{ children: 'children', hasChildren: 'hasChildren' }">
       <el-table-column width="40" type="select">
         <template slot="header" slot-scope="scope">
@@ -43,36 +43,60 @@
       </el-table-column>
       <el-table-column type="index" label="序号" width="60" align="center">
       </el-table-column>
-      <el-table-column prop="task_name" label="WBS任务名称"></el-table-column>
-      <el-table-column prop="wbs" label="任务代码" width="120"></el-table-column>
+      <el-table-column prop="task_name" label="WBS任务名称" width="220"></el-table-column>
+      <el-table-column prop="wbs" label="任务代码" width="100"></el-table-column>
       <el-table-column prop="quality_action" label="纠偏措施" width="120"></el-table-column>
-      <el-table-column label="工期" width="120">
+      <el-table-column label="工期" width="80">
         <template slot-scope="scope">
           <div>
             ${ scope.row.duration }
           </div>
         </template>
       </el-table-column>
-      <el-table-column label="开始日期" width="120">
+      <el-table-column label="开始日期" width="160">
         <template slot-scope="scope">
-          <div v-show="scope.row.task_type==='3'||scope.row.task_type==='2'">
-            ${ scope.row.subArray[0].plan_starttime }
+          <div>
+            ${ scope.row.plan_starttime }
+          </div>
+          <!-- <div v-show="scope.row.task_type==='3'||scope.row.task_type==='2'">
+            ${ scope.row.plan_starttime }
           </div>
           <div class="type-one" v-show="scope.row.task_type==='1'">
             <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
               ${ item.plan_starttime }
             </div>
+          </div> -->
+        </template>
+      </el-table-column>
+      <el-table-column label="结束日期" width="160">
+        <template slot-scope="scope">
+          <!-- <div  v-show="scope.row.task_type==='3'||scope.row.task_type==='2'">
+            ${ scope.row.plan_endtime }
+          </div> -->
+          <div>
+            ${ scope.row.plan_endtime }
+          </div>
+          <!-- <div class="type-one" v-show="scope.row.task_type==='1'">
+            <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
+              ${ item.plan_endtime }
+            </div>
+          </div> -->
+        </template>
+      </el-table-column>
+      <el-table-column label="资源开始日期" width="160">
+        <template slot-scope="scope">
+          <div class="type-one" v-show="scope.row.task_type==='1'||scope.row.task_type==='2'|scope.row.task_type==='3'">
+            <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
+              ${ item.res_plan_starttime }
+            </div>
           </div>
         </template>
       </el-table-column>
-      <el-table-column label="结束日期" width="120">
+      <el-table-column label="资源结束日期" width="160">
         <template slot-scope="scope">
-          <div  v-show="scope.row.task_type==='3'||scope.row.task_type==='2'">
-            ${ scope.row.subArray[0].plan_endtime }
-          </div>
-          <div class="type-one" v-show="scope.row.task_type==='1'">
+          <div class="type-one" v-show="scope.row.task_type==='1'||scope.row.task_type==='2'|scope.row.task_type==='3'">
             <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
-              ${ item.plan_endtime }
+              ${ item.res_plan_endtime }
             </div>
           </div>
         </template>
@@ -102,19 +126,19 @@
           </div>
         </template>
       </el-table-column>
-      <el-table-column label="持续时间" width="120">
+      <el-table-column label="持续时间" width="100">
         <template slot-scope="scope">
           <div class="checek-man" v-show="scope.row.task_type==='3'">
-            ${ scope.row.subArray[0].first_duration }
+            ${ scope.row.subArray[scope.row.subArray.length-1].first_duration }
           </div>
           <div class="checek-man" v-show="scope.row.task_type==='3'">
-            ${scope.row.subArray[0].modify_duration }
+            ${scope.row.subArray[scope.row.subArray.length-1].modify_duration }
           </div>
           <div class="checek-man" v-show="scope.row.task_type==='3'">
-            ${ scope.row.subArray[0].mod_con_duration }
+            ${ scope.row.subArray[scope.row.subArray.length-1].mod_con_duration }
           </div>
           <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
-            ${ scope.row.subArray[0].confirm_duration }
+            ${ scope.row.subArray[scope.row.subArray.length-1].confirm_duration }
           </div>
           <div v-show="scope.row.task_type==='2'">
             ${ scope.row.subArray[0].first_duration }
@@ -126,19 +150,19 @@
           </div>
         </template>
       </el-table-column>
-      <el-table-column label="承担人角色" width="120">
+      <el-table-column label="承担人角色" width="100">
         <template slot-scope="scope">
           <div class="checek-man" v-show="scope.row.task_type==='3'">
-            ${ scope.row.subArray[0].owner_role }
+            ${ scope.row.subArray[scope.row.subArray.length-1].owner_role }
           </div>
           <div class="checek-man" v-show="scope.row.task_type==='3'">
-            ${ scope.row.subArray[0].the_owner_role }
+            ${ scope.row.subArray[scope.row.subArray.length-1].the_owner_role }
           </div>
           <div class="checek-man" v-show="scope.row.task_type==='3'">
-            ${ scope.row.subArray[0].owner_role }
+            ${ scope.row.subArray[scope.row.subArray.length-1].owner_role }
           </div>
           <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
-            ${ scope.row.subArray[0].owner_role }
+            ${ scope.row.subArray[scope.row.subArray.length-1].owner_role }
           </div>
           <!-- <div v-show="scope.row.task_type==='1' ||scope.row.task_type==='2'">
             ${ scope.row.owner_role }
@@ -153,22 +177,22 @@
           </div>
         </template>
       </el-table-column>
-      <el-table-column label="承担人名称" width="120">
+      <el-table-column label="承担人名称" width="100">
         <template slot-scope="scope">
           <div class="checek-man" v-show="scope.row.task_type==='3'">
-            <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
+            <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[scope.row.subArray.length-1].owner }</span>
             <span v-else></span>
           </div>
           <div class="checek-man" v-show="scope.row.task_type==='3'">
-            <span v-if="scope.row.subArray[0].the_isreply==='2'">${ scope.row.subArray[0].the_owner }</span>
+            <span v-if="scope.row.subArray[0].the_isreply==='2'">${ scope.row.subArray[scope.row.subArray.length-1].the_owner }</span>
             <span v-else></span>
           </div>
           <div class="checek-man" v-show="scope.row.task_type==='3'">
-            <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
+            <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[scope.row.subArray.length-1].owner }</span>
             <span v-else></span>
           </div>
           <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
-            <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
+            <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[scope.row.subArray.length-1].owner }</span>
             <span v-else></span>
           </div>
           <!-- <div v-show="scope.row.task_type==='1' ||scope.row.task_type==='2'">
@@ -189,16 +213,16 @@
       <el-table-column label="承担人技能" width="120">
         <template slot-scope="scope">
           <div class="checek-man" v-show="scope.row.task_type==='3'">
-            ${ scope.row.subArray[0].skill }
+            ${ scope.row.subArray[scope.row.subArray.length-1].skill }
           </div>
           <div class="checek-man" v-show="scope.row.task_type==='3'">
-            ${ scope.row.subArray[0].the_skill }
+            ${ scope.row.subArray[scope.row.subArray.length-1].the_skill }
           </div>
           <div class="checek-man" v-show="scope.row.task_type==='3'">
-            ${ scope.row.subArray[0].skill }
+            ${ scope.row.subArray[scope.row.subArray.length-1].skill }
           </div>
           <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
-            ${ scope.row.subArray[0].skill }
+            ${ scope.row.subArray[scope.row.subArray.length-1].skill }
           </div>
           <!-- <div v-show="scope.row.task_type==='1' ||scope.row.task_type==='2'">
             ${ scope.row.owner }
