fix quality_ac table input width

--- a/质量管理-质量分析与控制/quality_analysis_control_v1.0/html/quality_analysis_control.html
+++ b/质量管理-质量分析与控制/quality_analysis_control_v1.0/html/quality_analysis_control.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -11,7 +11,7 @@
     <title>Document</title>
   </head>
 
-<body>
+<body> -->
 <div id="qualityACApp">
   <!-- <div class="btn-lsit">
     <div class="btn-box-left">
@@ -51,20 +51,20 @@
       @row-click="currentTaskClick"
       >
       <el-table-column prop="wbs" label="任务代码" width="100" ></el-table-column>
-      <el-table-column prop="task_name" label="WBS任务名称"></el-table-column>
-      <el-table-column prop="is_certical_task" label="是否关键任务" width="180" >
+      <el-table-column prop="task_name" label="WBS任务名称" min-width="180"></el-table-column>
+      <el-table-column prop="is_certical_task" label="是否关键任务" width="100" >
         <template slot-scope="scope">
           ${scope.row.is_certical_task?"是":"否"}
         </template>
       </el-table-column>
-      <el-table-column label="任务状态" width="180" >
+      <el-table-column label="任务状态" width="140" >
         <template slot-scope="scope">
           <div v-show="scope.row.task_schedule_status==='000'">未开始</div>
           <div v-show="scope.row.task_schedule_status==='100'">进行中</div>
           <div v-show="scope.row.task_schedule_status==='200'">已完成</div>
         </template>
       </el-table-column>
-      <el-table-column label="处理状态" width="180" >
+      <el-table-column label="处理状态" width="140" >
         <template slot-scope="scope">
           ${scope.row.quality_handle_status==='1'?"已处理":"未处理"}
         </template>
@@ -86,12 +86,12 @@
         <el-table-column prop="plan_endtime" label="计划完成并提交时间" width="160"></el-table-column>
         <el-table-column prop="end_time" label="实际完成并提交时间" width="160" ></el-table-column>
         <el-table-column prop="DValue" label="偏差值"  width="80" ></el-table-column>
-        <el-table-column label="偏差原因" width="200" >
+        <el-table-column label="偏差原因" min-width="200" >
           <template slot-scope="scope">
             <el-input @change="reasonChange" size="small" maxlength="50" :disabled="scope.row.task_schedule_status!=='200'" v-model="scope.row.quality_reason" placeholder="请输入内容偏差原因"></el-input>
           </template>
         </el-table-column>
-        <el-table-column label="纠偏措施">
+        <el-table-column label="纠偏措施" min-width="200">
           <template slot-scope="scope">
             <el-input @change="actionChange" size="small" maxlength="50" :disabled="scope.row.task_schedule_status!=='200'" v-model="scope.row.quality_action" placeholder="请输入纠偏措施"></el-input>
           </template>
@@ -205,9 +205,9 @@
     </div>
   </!-->
 </div>
-<script src="../js/lodash.js"></script>
+<!-- <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
-</html>
+</html> -->
