--- a/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
@@ -46,7 +46,7 @@
       <el-table-column prop="task_name" label="WBS任务名称" width="220"></el-table-column>
       <el-table-column prop="wbs" label="任务代码" width="100"></el-table-column>
       <el-table-column prop="quality_action" label="纠偏措施" width="120"></el-table-column>
-      <el-table-column label="工期" width="80">
+      <el-table-column label="工时" width="80">
         <template slot-scope="scope">
           <div>
             ${ scope.row.duration }
