--- a/质量计划设置页面自定义控件/quality_plan_1.3/html/quality_plan.html
+++ b/质量计划设置页面自定义控件/quality_plan_1.3/html/quality_plan.html
@@ -41,7 +41,7 @@
     <el-table-column prop="task_name" label="WBS任务名称"></el-table-column>
     <el-table-column prop="wbs" label="任务代码" width="100" ></el-table-column>
     
-    <el-table-column label="工期" width="120">
+    <el-table-column label="工时" width="120">
       <template slot-scope="scope">
         <div>
           ${ scope.row.duration }
