--- a/自定义控件权限管理/custom_control_permission_management/html/custom_control_permission_management.html
+++ b/自定义控件权限管理/custom_control_permission_management/html/custom_control_permission_management.html
@@ -105,6 +105,7 @@
                   </div>
                   <div class="field-item switch-btn-field">
                     <el-switch
+                      :disabled="item.isvisible===0?true:false"
                       v-model="item.iseditable===1?true:false"
                       active-color="#13ce66"
                       @change="(val)=>{iseditableChange(val,item)}"
